changed banner image

--- a/webpage/assets/css/main.css
+++ b/webpage/assets/css/main.css
@@ -2934,7 +2934,7 @@
 
 	#banner {
 		padding: 12em 0 10em 0;
-		background-image: url('../../images/banner.jpg');
+		background-image: url('https://confluence.vodafone.co.nz/confluence/download/attachments/76088491/banner.jpg?api=v2');
 		background-size: cover;
 		background-position: top;
 		background-attachment: fixed;
